# face-overlay

./: .gitignore  Cargo.toml  README.md  SWAY_DEBUGGING.md  performance_test.rs  simple_performance_test.rs  test-sway.sh  test_dimension_fix.rs  test_gpu.rs
src/: background_model.rs  cli.rs  hybrid_segmentation.rs  lib.rs  main.rs  mouse_tracker.rs  optical_flow.rs  pipeline.rs  segmentation.rs  wayland_overlay.rs  webcam.rs
