[package]
name = "face-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
# Webcam capture (optional)
nokhwa = { version = "0.10", features = ["input-v4l"], optional = true }

# AI/ML inference (optional)
ort = { version = "2.0.0-rc.10", features = ["copy-dylibs"], optional = true }
ndarray = { version = "0.15", optional = true }

# Wayland layer shell
smithay-client-toolkit = { version = "0.19", default-features = false }
wayland-protocols-wlr = "0.3"
wayland-client = "0.31"

# Image processing
image = { version = "0.25", features = ["png", "jpeg"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime and HTTP client
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System dependencies for SHM
libc = "0.2"
tempfile = "3.8"

[features]
default = []
real-camera = ["dep:nokhwa"]
ai-segmentation = ["dep:ort", "dep:ndarray"]
full = ["real-camera", "ai-segmentation"]
