[package]
name = "face-overlay"
version = "0.1.0"
edition = "2024"

[lib]
name = "face_overlay"
path = "src/lib.rs"

# [[bin]]
# name = "performance_test"
# path = "performance_test.rs"

# [[bin]]
# name = "simple_performance_test"
# path = "simple_performance_test.rs"

# [[bin]]
# name = "test_dimension_fix"
# path = "test_dimension_fix.rs"

[dependencies]
# Webcam capture
nokhwa = { version = "0.10", features = ["input-v4l"] }

# AI/ML inference  
ort = { version = "2.0.0-rc.10", features = ["copy-dylibs"] }
ndarray = "0.15"

# Wayland layer shell
smithay-client-toolkit = { version = "0.19", default-features = false }
wayland-protocols-wlr = "0.3"
wayland-client = "0.31"

# Image processing
image = { version = "0.25", features = ["png", "jpeg"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime and HTTP client
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System dependencies for SHM
libc = "0.2"
tempfile = "3.8"

